fix: a bug of dark mode in quark browser

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -186,7 +186,7 @@
   }
 
   table {
-    @apply whitespace-nowrap text-center text-lg font-medium leading-loose;
+    @apply whitespace-nowrap text-center text-lg font-medium leading-loose text-black dark:text-white;
   }
 
   th {
